--- a/src/index.template.html
+++ b/src/index.template.html
@@ -15,7 +15,7 @@
     <link rel="icon" type="image/ico" href="statics/icons/favicon.ico">
     <link rel="manifest" href="statics/manifest.webmanifest">
   </head>
-  <body>
+  <body style="position: relative; overflow: hidden">
     <!-- DO NOT touch the following DIV -->
     <div id="q-app"></div>
   </body>
