--- a/src/index.template.html
+++ b/src/index.template.html
@@ -9,10 +9,10 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (htmlWebpackPlugin.options.ctx.mode.cordova || htmlWebpackPlugin.options.ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="statics/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="statics/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="statics/icons/favicon-16x16.png">
-    <link rel="icon" type="image/ico" href="statics/icons/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="statics/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="statics/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="statics/favicon/favicon-16x16.png">
+    <link rel="icon" type="image/ico" href="statics/favicon/favicon.ico">
     <link rel="manifest" href="statics/manifest.webmanifest">
   </head>
   <body style="position: relative; overflow: hidden">
